--- a/jobs/cp_halo/templates/data/properties.sh.erb
+++ b/jobs/cp_halo/templates/data/properties.sh.erb
@@ -9,3 +9,4 @@ export JOB_INDEX=<%= index %>
 # full job name, like redis/0 or webapp/3
 export JOB_FULL="$NAME/$JOB_INDEX"
 export AGENT_KEY=<%= p("cp_halo.agent_key") %>
+export AWS_SERVER_LABEL=<%= p("cp_halo.aws_server_label") %>
