Azure id with hostname

--- a/jobs/cp_halo/templates/data/properties.sh.erb
+++ b/jobs/cp_halo/templates/data/properties.sh.erb
@@ -11,3 +11,4 @@ export JOB_FULL="$NAME/$JOB_INDEX"
 export AGENT_KEY=<%= p("cp_halo.agent_key") %>
 export SERVER_TAG=<%= p("cp_halo.server_tag") %>
 export AWS_SERVER_LABEL=<%= p("cp_halo.aws_server_label") %>
+export AZURE_ID=<%= p("cp_halo.azure_id") %>
